# api/src/lang/ja/validation.php
@@ -156,7 +156,7 @@ return [
     'attributes' => [
         'email' => 'メールアドレス',
         'password' => 'パスワード',
-        'case' => 'ランキング種類',
+        'type' => 'ランキング種類',
         'page' => 'ページ番号',
         'limit' => '取得件数',
         'questionnaireId' => 'アンケートID'
